--- a/css/style.css
+++ b/css/style.css
@@ -2398,7 +2398,7 @@ ul {
     left: 0;
     top: 50px;
     width: 100%;
-    background-color: #fff;
+    background-color: #ff4800;
     text-align: center !important;
   }
   /* line 144, ../../01 cl html template/187 Shotgear Photography/187 Shotgear Photography Html/sass/_menu.scss */
