--- a/css/style.css
+++ b/css/style.css
@@ -2311,7 +2311,7 @@ ul {
 
 /* line 52, ../../01 cl html template/187 Shotgear Photography/187 Shotgear Photography Html/sass/_menu.scss */
 .cart i {
-  color: #1e2528;
+  color: #fff;
   position: relative;
   z-index: 1;
   font-size: 15px;
